--- a/css/page7.css
+++ b/css/page7.css
@@ -37,7 +37,7 @@ body,html {
 .menu_page7 {
 	width: 24px;
 	height: 24px;
-	background-image: url('../pics/3_line_menu.png');
+	background-image: url('../pic/pics/3_line_menu.png');
 	background-position: center;
 	background-size: cover;
 	position: absolute;
