--- a/css/page7.css
+++ b/css/page7.css
@@ -1,4 +1,5 @@
 body,html {
+	margin: 0 auto;
 	height: 100%;
 	font-family: 'Montserrat', sans-serif;
 }
@@ -6,6 +7,7 @@ body,html {
 .tickets {
 	width: 100%;
 	height: 100%;
+	position: fixed;
 }
 
 .navigationBar_page7 {
@@ -114,6 +116,32 @@ body,html {
 	color: #D4D4D4;
 }
 
+.cont_line_page7 {
+	position: absolute;
+	width: 100%;
+	height: 1px;
+	left: 1px;
+	top: 46px;
+}
+
+.line1_page7 {
+	position: absolute;
+	width: 100px;
+	height: 0px;
+	border: 2px solid #FF473A;
+	transform: matrix(1, 0, -0.01, 1, 0, 0);
+	left: calc(50% - 105px/2 + 0.5px);
+	bottom: 0;
+}
+
+.line2_page7 {
+	position: absolute;
+	left: 1px;
+	right: 0px;
+	border: 1px solid #F4F5F2;
+	transform: matrix(1, 0, 0, 1, 0, 0);
+}
+
 .March_22_2016_page7 {
 	width: 348px;
 	height: 35px;
@@ -130,8 +158,8 @@ body,html {
 	position: absolute;
 	width: 94.31px;
 	height: 149.39px;
-	left: 27.25px;
-	top: 246.56px;
+	left: 12px;
+	top: 180px;
 
 }
 
@@ -169,8 +197,8 @@ body,html {
 	position: absolute;
 	width: 64.5px;
 	height: 134.22px;
-	left: 278.62px;
-	top: 256.2px;
+	left: 290px;
+	top: 180px;
 
 }
 
@@ -288,4 +316,73 @@ body,html {
 	font-size: 18px;
 	line-height: normal;
 	color: #D4D4D4;
+}
+
+.cont_frame_page7 {
+	position: absolute;
+	height: 48px;
+	left: 12px;
+	right: 15px;
+	bottom: 0px;
+}
+
+.frame_line_page7 {
+	position: absolute;
+	left: 0px;
+	right: 0px;
+	top: 9.22px;
+	bottom: 38.78px;
+	border: 1px solid #FF473A;
+}
+
+.Total_page7 {
+	position: absolute;
+	width: 70px;
+	height: 18px;
+	left: 14.56px;
+	bottom: 16.78px;
+	font-family: Montserrat;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: normal;
+	color: #000000;
+}
+
+.text_total_page7 {
+	position: absolute;
+	width: 37px;
+	height: 18px;
+	right: 32.12px;
+	bottom: 16.78px;
+	font-family: Montserrat;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: normal;
+	text-align: center;
+	color: #000000;
+}
+
+.button_page7 {
+	margin: 0 auto;
+	position: absolute;
+	height: 60px;
+	bottom: 12px;
+	line-height: 60px;
+	
+}
+
+.cont_button_page7 {
+	position: absolute;
+	line-height: 42px;
+	text-align: center;
+	font-size: 20px;
+	color: white;
+	width: 248px;
+	height: 42px;
+	top: 9px;
+	left: 55px;
+	font-size: 12px;
+	background-color: #FF473A;
 }
